# dicot

./: LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: pythonpackage.yml
dicot/: __init__.py  connections.py  motors.py  packets.py
tests/: test_dicot.py
